gcc/testsuite/rust/rustc/ui/parser/issues/issue-49040_dg.rs
#![allow(unused_variables)]; // { dg-error "" "" { target *-*-* } }
fn foo() {}
// { dg-error ".E0601." "" { target *-*-* } .-1 }

